--- a/p/themes/Flat/flat.css
+++ b/p/themes/Flat/flat.css
@@ -435,6 +435,9 @@ a.btn {
 	vertical-align: middle;
 	text-align: center;
 }
+.header > .item.title{
+	width: 230px;
+}
 .header > .item.title h1 {
 	margin: 0.5em 0;
 }
