--- a/p/themes/Origine/origine.css
+++ b/p/themes/Origine/origine.css
@@ -479,6 +479,9 @@ a.btn {
 	vertical-align: middle;
 	text-align: center;
 }
+.header > .item.title{
+	width: 230px;
+}
 .header > .item.title h1 {
 	margin: 0.5em 0;
 	text-shadow: 1px -1px 0 #ccc;
